--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -1,5 +1,18 @@
+.bg-nav {
+    background-color: #3b5d50 !important;
+    border: none !important;
+}
+
 .link-color {
     color: #adb5bd !important;
+}
+
+.hover:hover {
+    color: #fff !important;
+}
+
+.fs-slight-1 {
+    font-size: 14px !important;
 }
 
 .fw-slightly-bold {
@@ -11,5 +24,111 @@
 }
 
 .navBar {
-    position: absolute !important;
+    position: scroll !important;
+}
+
+.hamburger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid white; */
+    width: 50px;
+    height: 50px;
+}
+
+.bar {
+    border-top: 2px solid #adb5bd;
+    width: 25px;
+    height: 30px;
+    position: relative;
+    margin-top: 8px;
+}
+
+.bar::before {
+    position: absolute;
+    content: "";
+    border-bottom: 2px solid #adb5bd;
+    width: 100%;
+    height: 100%;
+    bottom: 70%;
+}
+
+.bar::after {
+    position: absolute;
+    content: "";
+    border-bottom: 2px solid #adb5bd;
+    bottom: 40%;
+    width: 100%;
+    height: 100%;
+}
+
+ul {
+    padding: 0 !important;
+}
+
+.nav_list_wrap {
+    height: 0;
+    transition: height .2s linear;
+    overflow-y: hidden;
+}
+
+div.ul-active {
+    height: 340px;
+    border-bottom: 1px solid #adb5bd;
+}
+
+ul li {
+    list-style: none;
+    /* border: 1px solid white; */
+    padding: 10px 0;
+}
+
+ul li .nav-two {
+    text-decoration: none;
+    text-transform: capitalize;
+}
+
+nav .nav_link {
+    position: relative;
+    transition: .2s ease;
+}
+
+
+nav .nav_link::before {
+    position: absolute;
+    content: "";
+    border-bottom: 5px solid #ffc107;
+    bottom: -13px;
+    width: 0;
+    transition: .2s ease;
+}
+
+nav .nav_link:hover {
+    color: white !important;
+}
+
+nav .nav_link:hover::before, nav a.active::before{
+    width: 100%;
+}
+
+.active {
+    color: white !important;
+}
+
+
+@media screen and (max-width:996px) {
+    .ms-6 {
+        margin-left: 5rem !important;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .title {
+        padding-left: .8rem;
+        font-size: 32px;
+    }
+
+    .wrapper {
+        padding: 0 !important;
+    }
 }
