--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,3 +1,27 @@
 .home {
-    
+    background-color: #eff2f1;
+}
+
+.crafted-with-excellent-material {
+
+}
+
+.craft {
+    /* max-width: 80%; */
+}
+
+.crafted h2 {
+    color: #2f2f2f !important;
+}
+
+.crafted p {
+    color: #2f2f2f !important;
+    font-size: 14px;
+    color: #6a6a6a !important;
+}
+
+@media screen and (max-width:992px) {
+    .craft {
+        max-width: 100%;
+    }
 }
