--- a/src/Product-item/style.css
+++ b/src/Product-item/style.css
@@ -2,6 +2,7 @@
     position: relative;
     text-align: center;
     z-index: 2;
+    padding-bottom: 35px !important;
 }
 
 .product-card::after {
@@ -17,7 +18,7 @@
 }
 
 .product-card:hover::after {
-    height: 63%;
+    height: 68%;
 }
 
 .product-card:hover .product-img {
