--- a/src/Team/team.css
+++ b/src/Team/team.css
@@ -21,3 +21,12 @@
     padding: 112px 0;
     background-color: #eff2f1;
 }
+
+@media screen and (max-width:992px) {
+    
+
+   .team-section-header {
+       font-size: 24px;
+       color: #2f2f2f;
+   }
+}
