--- a/src/Features/style.css
+++ b/src/Features/style.css
@@ -2,6 +2,10 @@
     margin-bottom: 1.875rem;
 }
 
+.feature-details {
+    color: #6a6a6a;
+}
+
 .feature-icon {
     display: inline-block;
     position: relative;
