contact us logo update

--- a/src/components/ContactUs/contact.css
+++ b/src/components/ContactUs/contact.css
@@ -6,6 +6,11 @@
     background-color: #3b5d50;
     height: 50px;
     width: 70px;
+    min-width: 70px;
     border-radius: 10px;
     margin-right: 20px;
+}
+
+ p {
+    font-size: 14px;
 }
