--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -2,10 +2,15 @@
     padding: 112px 0 192px 0;
 }
 .cart-form .table-img {
-    width: 200px;
+    width: 100px;
 }
 .cart-form td, .cart-form th {
     padding: 20px;
     text-align: center;
     font-size: 16px;
+}
+.remove-btn {
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
 }
