--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -14,3 +14,13 @@
     width: 30px;
     height: 30px;
 }
+.table-form {
+    overflow: auto;
+}
+tbody {
+    padding: 0 20px;
+}
+
+.productQty {
+    max-width: 120px;
+}
