--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -9,6 +9,22 @@
     text-align: center;
     font-size: 16px;
 }
+select {
+    width: 20%;
+    padding: 3px 2px;
+    background: #fff;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0 0 2px #5e5e8e7a;
+}
+select:focus {
+    border: none;
+    outline: none;
+}
+option {
+    padding: 3px 2px;
+    border-radius: 0 0 5px 5px;
+}
 .remove-btn {
     cursor: pointer;
     width: 30px;
